Name:                   hash-map-generator
Version:                0.0.0
Author:                 Scott Murphy <scottmurphy09@gmail.com>
Maintainer:             Scott Murphy <scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     README.md, ChangeLog.md

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Data.HashMap.Generator
                        Data.HashMap.Generator.Internal
--  Other-Modules:        
  Build-Depends:        base >= 4 && < 5
-- Test Suite Code
                      , lens
                      , regex-genex
                      , tasty                      
                      , tasty-golden
                      , tasty-hunit
                      , tasty-quickcheck
                      , QuickCheck
                      , unordered-containers
                      , hashable

executable hash-map-generator
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  main-is:              Main.hs
  Build-Depends:        base >= 4 && < 5
                      , hash-map-generator
-- Test Suite Code
                      , lens
                      , regex-genex
                      , tasty                      
                      , tasty-golden
                      , tasty-hunit
                      , tasty-quickcheck
                      , QuickCheck
                      , unordered-containers
                      , hashable

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , regex-genex
                      , tasty                      
                      , tasty-golden
                      , tasty-hunit
                      , tasty-quickcheck
                      , QuickCheck
                      , unordered-containers
                      , hashable
                      

Source-Repository head
  Type:                 git
--  Location:             
