Name:                   hash-map-generator
Version:                0.1.0
Author:                 Scott Murphy <scottmurphy09@gmail.com>
Maintainer:             Scott Murphy <scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Library for making self contained hash maps 
Description:
            This library creates a 'SelfMap', which is a Hashmap whose keys are generated
            using Generic instances.  They are based on the Data Constructors of a given sum type.
            This allows the user to have a quick record store with variable entries.
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     README.md, ChangeLog.md

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Data.HashMap.Generator


  Build-Depends:        base >= 4 && < 5
                      , unordered-containers
                      , hashable
                      , text
                      , template-haskell


Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , regex-genex
                      , tasty                      
                      , tasty-golden
                      , tasty-hunit
                      , tasty-quickcheck
                      , QuickCheck
                      , unordered-containers
                      , hashable
                      , text
                      , template-haskell
                      

Source-Repository head
  Type:                 git
  Location:             https://github.com/plow-technologies/hash-map-generator.git
